// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Rna Editor Expanded component > should render correctly in edit mode 1`] = `
<div
  class="css-11rt075-RnaEditorExpandedContainer e1bzgmlm0"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-1mejh5g-CompactViewName e1bzgmlm1"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value=""
  />
  <div
    class="css-8fuljs-GroupsContainer e1bzgmlm2"
  >
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="sugar"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="base"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Base
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="phosphate"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Phosphate
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-uy90av-ButtonsContainer e1bzgmlm7"
  >
    <button
      class="css-2lp97s-StyledButton e1bzgmlm8"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-1w55vqj-StyledButton e1bzgmlm8"
      data-mui-internal-clone-element="true"
      data-testid="add-to-presets-btn"
      disabled=""
      type="button"
    >
      Add to Presets
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component > should render correctly in edit mode with modification of sequence 1`] = `
<div
  class="rna-editor-expanded--sequence-edit-mode css-11rt075-RnaEditorExpandedContainer e1bzgmlm0"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-1mejh5g-CompactViewName e1bzgmlm1"
    data-testid="name-your-structure-editbox"
    disabled=""
    placeholder="Name your structure"
    value="2 nucleotides"
  />
  <div
    class="css-8fuljs-GroupsContainer e1bzgmlm2"
  >
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1hd96lw-GroupIcon e1fynzbp5"
          name="sugar"
        />
      </div>
      <p
        class="css-amn78e-CompactGroupText e1fynzbp8"
      >
        R
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1hd96lw-GroupIcon e1fynzbp5"
          name="base"
        />
      </div>
      <p
        class="css-amn78e-CompactGroupText e1fynzbp8"
      >
        [multiple]
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1hd96lw-GroupIcon e1fynzbp5"
          name="phosphate"
        />
      </div>
      <p
        class="css-amn78e-CompactGroupText e1fynzbp8"
      >
        P
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            disabled=""
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-uy90av-ButtonsContainer e1bzgmlm7"
  >
    <button
      class="css-2lp97s-StyledButton e1bzgmlm8"
      data-testid="cancel-btn"
      type="button"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="css-1w55vqj-StyledButton e1bzgmlm8"
      data-mui-internal-clone-element="true"
      data-testid="save-btn"
      disabled=""
      type="button"
    >
      Update
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component > should render correctly in view mode 1`] = `
<div
  class="css-11rt075-RnaEditorExpandedContainer e1bzgmlm0"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-1mejh5g-CompactViewName e1bzgmlm1"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value="MyRna"
  />
  <div
    class="css-8fuljs-GroupsContainer e1bzgmlm2"
  >
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="sugar"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="base"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Base
      </p>
    </div>
    <div
      class="css-q5sud3-CompactGroupBlockContainer e1fynzbp6"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1giqrib-CompactGroupConnection e1fynzbp7"
      />
      <div
        class="css-1wack26-GroupIconContainer e1fynzbp4"
      >
        <svg
          class="css-1usimxt-GroupIcon e1fynzbp5"
          name="phosphate"
        />
      </div>
      <p
        class="css-wmjgug-CompactGroupText e1fynzbp8"
      >
        Phosphate
      </p>
      <div
        class="_phosphatePositionIconWrapperOnPresetCard_bb0c03"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="_phosphatePositionTrigger_bb0c03"
            disabled=""
            type="button"
          >
            <div
              class="_phosphatePositionIconWrapper_bb0c03"
            >
              <svg
                name="preset-right-phosphate"
              />
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-uy90av-ButtonsContainer e1bzgmlm7"
  >
    <button
      class="css-2lp97s-StyledButton e1bzgmlm8"
      data-testid="duplicate-btn"
      type="button"
    >
      Duplicate and Edit
    </button>
    <button
      class="css-2lp97s-StyledButton e1bzgmlm8"
      data-testid="edit-btn"
      type="button"
    >
      Edit
    </button>
  </div>
</div>
`;
